Fixed layout issue on chrome

--- a/public/styles.css
+++ b/public/styles.css
@@ -53,15 +53,15 @@ main {
 
 
 .sidebar {
-    grid-column: 1;
-    justify-self: end;
-    text-align: left; /* left-justify sidebar contents */
     display: flex;
     flex-direction: column;
     gap: 10px;
-/*     align-self: start; /* allow sticky inside grid (avoid stretch) */ */
     position: sticky;
+    top: 24px;
     width: max-content;
+    
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .sidebar-header { display: flex; align-items: center; gap: 8px; justify-content: flex-start; }
